--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -10,7 +10,7 @@
 }
 
 :root{
-    --light-color: #f3f3fe;
+    --light-color: #ffffff;
     --dark-color: #3b3636;
     --border-top-color: rgba(0,0,0,.1);
     --link-hover-color: rgba(255,255,255,.2);
