--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -451,13 +451,19 @@ textarea{
     font-size: clamp(2rem, 5vw, 4rem);
 }
 
+.section-subtitle01{
+    font-size: clamp(2rem, 5vw, 3rem);
+}
+
 .portfolio-cards{
     gap: 2.5rem;
 }
 
 .card-image{
     height: 30rem;
-    background-color: #fdfdfd;
+    
+    filter: grayscale(100%);
+    -webkit-filter: grayscale(100%);
     margin-bottom: 2.5rem;
     border-radius: .4rem;
     display: flex;
@@ -470,6 +476,14 @@ textarea{
     margin-bottom: 2.5rem;
 }
 
+.card-image02{
+    margin-bottom: 2.5rem;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+}
+
 .card-image img{
     width: 100%;
     height: 100%;
@@ -479,7 +493,9 @@ textarea{
 
 .portfolio-card:hover .card-image,
 .portfolio-card:focus .card-image{
-    background-color: #3b3636;   
+    filter: none;
+    -webkit-filter: grayscale(0);
+      
 }
 
 .card-heading{
@@ -501,13 +517,13 @@ textarea{
 }
 
 .card-subtitle01{
-    font-size: 1.7rem;
+    font-size: 2rem;
     opacity: .8;
     margin-bottom: 1.5rem;
 }
 
 .card-subtitle02{
-    font-size: 1.7rem;
+    font-size: 1.9rem;
     opacity: .8;
     margin-bottom: 1.5rem;
     align-items: center;
